--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "symfony/serializer": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/validator": "5.4.*",
+        "symfony/webpack-encore-bundle": "^2.0",
         "symfony/yaml": "5.4.*",
         "symfonycasts/verify-email-bundle": "^1.13"
     },
