--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=82e0d0d066bd3b57cf36bfbc55320b22
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 #DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://c0coder:i@UuFjmZ5jLsY@static.35.142.216.95.clients.your-server.de:3306/c0coder"
+DATABASE_URL="mysql://c0coder:og_EZtS85@static.35.142.216.95.clients.your-server.de:3306/c0coder"
 # DATABASE_URL="mysql://root@127.0.0.1:3306/cvDB?serverVersion=8&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
